write extrinsics and 3d coordinates to files

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,5 @@
 #TODO: Implement both relative and absolute camera_pose
 #TODO: Save 3DPoints in the end
 #TODO: Save 3D points running
+#TODO: Instead of saying two 3D points are the same within a dist, also take into account the distance from the camera frame
+#TODO: Remove outliers
